# project_byte_hamr

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE.md  Makefile  README.md  TODO.md  VERSION.md  card.kicad_sch  card_fpga.kicad_sch  flash.kicad_sch  fp-lib-table  gpio.kicad_sch  logo.kicad_sym  logo_sm.kicad_mod  power.kicad_sch  project_byte_hamr.csv  project_byte_hamr.kicad_pcb  project_byte_hamr.kicad_pro  project_byte_hamr.kicad_sch  ram.kicad_sch  usb.kicad_sch
.claude/agents/: liron-reference-scanner.md
docs/: apple2_cheatsheet.md  architecture.md  pinout.md
docs/RCS08050000Z0EA/: RCS08050000Z0EA.kicad_sym  RESC2012X50N.kicad_mod
footprints/footprints.pretty/: DBQ24-L.kicad_mod  (+1 more)
gateware/: README.md
gerbers/: project_byte_hamr-B_Cu.gbr  project_byte_hamr-B_Mask.gbr  project_byte_hamr-B_Paste.gbr  project_byte_hamr-B_Silkscreen.gbr  project_byte_hamr-Edge_Cuts.gbr  project_byte_hamr-F_Cu.gbr  project_byte_hamr-F_Mask.gbr  project_byte_hamr-F_Paste.gbr  project_byte_hamr-F_Silkscreen.gbr  project_byte_hamr-In1_Cu.gbr  project_byte_hamr-In2_Cu.gbr  project_byte_hamr-NPTH.drl  project_byte_hamr-PTH.drl  project_byte_hamr-job.gbrjob
scripts/: augment_fpga_pinout.py  bin2mem.py  extract_fpga_pinout.py  generate_lpf.py  rom2mem.py
software/: README.md
software/SMARTPORT/: CMakeLists.txt  Makefile  PLAN.md  ProDOS_2_4_1.po  ProDOS_lean.po  README.md  create_prodos_vol.py  disk_image.S  dsk2po.py  fm_decode.S  fm_rx.pio  fm_tx.pio  hw_config.c  main.c  pico_sdk_import.cmake  picoport.h  sd_block.c  sd_block.h  sp_asm.S  sp_cmd.c  sp_data.c  sp_decode_pkt.c  sp_encode.c  sp_proto.h  test_areg.po  test_bytes.po  test_checksum.po  test_deadbeef.po  test_grpmsb.po  test_hi.po  test_main.c  test_multiblock.po  test_ok.po  test_sequential.po
(+295 files in other folders)
